# german-legal-ai-detection

./: .gitignore  README.md  config.py  download_all.py  main.py  pyproject.toml  setup_and_run.py  test_pipeline.py
paper/: paper.tex  references.bib
scripts/: build_hard_set.py  deploy_cloud.sh  evaluate.py  extract_topics.py  generate_ai.py  generate_vllm.py  mining.py  mining_bundestag.py  mining_dip_bundestag.py  mining_fobbe.py  mining_gesp.py  mining_legal_commons.py  mining_openlegaldata.py  mining_openlegaldata_hf.py  mining_rii.py  predict.py  preprocessing.py  presplit_cache.py  provision.sh  report_sources.py  serve.py  test_batch_gen.py  train.py
scripts/models/: baseline.py  features.py  oneclass.py  transformer.py
tests/: hard_set.jsonl
utils/: mining.py  nlp_utils.py
