[project]
name = "german-ai-text-detector"
version = "0.2.0"
description = "Detect AI-generated German legal and administrative texts"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.33.1",
    "spacy>=3.8.0",
    "scikit-learn>=1.6.0",
    "transformers>=4.48.0",
    "torch>=2.5.0",
    "datasets>=3.3.0",
    "evaluate>=0.4.0",
    "peft>=0.14.0",
    "mlflow>=2.20.0",
    "sentencepiece>=0.2.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "tqdm>=4.67.0",
    "openai>=1.58.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "pydantic>=2.10.0",
    "colorlog>=6.9.0",
    "rapidfuzz>=3.11.0",
    "mlx-lm>=0.31.0; sys_platform == 'darwin'",
    "mlx-vlm>=0.4.3; sys_platform == 'darwin'",
    "beautifulsoup4>=4.12.0",
]

[tool.setuptools.packages.find]
include = ["scripts*", "utils*"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
